2010-01-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/*.c, src/*.h:
   Update copyright information.


2009-12-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_openuri.c:
   Remove trailing dots and colons from URIs.


2009-11-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_tasks.c:
   Enable basic sorting of the columns.
   Make the columns resizable.


2009-11-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_tasks.c:
   Add a simple popup menu to update the Tasks list and hide
   the Messages window.
 * src/addons.c, src/ao_tasks.c:
   Update the tasks list on startup only first the main window has been
   realized, i.e. Geany has finished the startup process.
 * src/addons.c, src/ao_tasks.c, src/ao_tasks.h:
   Update the task list only for changed documents and on document
   closing, simply delete matching TODO tasks instead of updating all.
   This is major speed up of the whole tasks processing.
 * src/addons.c, src/ao_tasks.c, src/ao_tasks.h:
   Add a property to the AoTasks class to prepare configurable
   tasks tokens.
   Make the search tokens for the Task list fully configurable
   (closes #2775986).


2009-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/Makefile.am, src/tasks.c, src/tasks.h, src/ao_tasks.h,
   src/ao_tasks.c, src/addons.c:
   Complete rewrite of the Tasks Addon. Changes:
   - Works on all open documents, not only on the current one
   - Rescan for tokens only on document open/save/close
   - Add keybinding to activate the Tasks tab


2009-11-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_bookmarklist.c:
   Prevent updating the bookmark list if it is disabled.
 * src/Makefile.am, src/ao_markword.c, src/ao_markword.h, src/addons.c:
   Add 'Mark Word' addon.


2009-11-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/addons.c:
   Fix setting up keybindings.
 * src/ao_bookmarklist.c: