@@ -2,6 +2,8 @@
 
  * src/*.c, src/*.h:
    Update copyright information.
+ * src/ao_bookmarklist.c:
+   Fix warning if the bookmark list is disabled.
 
 
 2009-12-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
